<resources>
    <string name="app_name">Project 24</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? <u>Sign up now</u></string>
    <string name="btn_link_to_login">Already Registred? <u>Log In</u></string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="action_settings">Settings</string>
    <string name="why_location_question">Why the locations aren\'t precise?</string>
    <string name="why_location_answer">Because there are no exact locations available on the Internet or any other sources. We have started this app so that people can help us in getting the precise locations of the accident prone areas.<br/>
    </string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="disclaim"> Disclaimer: The locations aren\'t exact.</string>


    <dimen name="profile_width">75dp</dimen>
    <dimen name="profile_height">75dp</dimen>

    <string name="facebook_app_id">265119523964494</string>
    <string name="fb_login_protocol_scheme">fb265119523964494</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="about_us_1">
        We are a group of people who believe awareness has the potential to prevent accidents. </string>

    <string name="about_us_2"> Project 24 is dedicated to the 24 young engineers who lost their lives in Beas River on June 8th, 2014.</string>

    <string name="about_us_3"> Project 24 is an effort to identify the accident prone zones across the globe by means of community and governmental support.

    </string>


    <string name="faq_question_3">Can I add a risk prone location?<br/></string>
    <string name="faq_answer_3"> Yes. You have to login using your Facebook account or Gmail account. Then press the navigation bar and click on ‘Add your area’. You have to click a picture of the area and send it to us. This picture will be verified by our team and it will be added by us.<br/></string>


    <string name="faq_question_4">Why do I have to login to report a location on Project 24?<br/></string>
    <string name="faq_answer_4"> Social sign-in feature will keep the reporting procedure much more authentic. A user can still use all the essential features of Project 24 without logging in.<br/></string>

    <string name="faq_question_1">What is Project 24?<br/></string>
    <string name="faq_answer_1"> Project 24 is an accident prone area alert application which will locate the potentially risky zones and make the data available to the user.<br/> </string>


    <string name="faq_question_5">Are all the reported ocations accurate on Project 24?<br/></string>
    <string name="faq_answer_5">No. The location data is represented based on our best estimate.<br/> </string>


    <string name="faq_question"><br/></string>
    <string name="faq_answer"><br/> </string>


    <string name="faq_question_6">Can I use Project 24 without access to internet?<br/></string>
    <string name="faq_answer_6">Project 24 supports offline maps. A user will be able to use Project24 without internet connection if he has google offline maps available on his device for a particular location.<br/> </string>

    <string name="faq_question_2">Why Project 24? Are all accident prone areas updated on Project 24?<br/></string>
    <string name="faq_answer_2">Project 24 was created with a strong belief that awareness has a potential to avoid accidents. This app is dedicated to the 24 young engineers who lost their lives in Beas river on June 8th,2014. We are working hard to update the accident prone areas.<br/></string>


</resources>