<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.user.alltronics.locate.AboutUs">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="16dp">


        <TextView
            android:id="@+id/about_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/about_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/about_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
